--- a/app/index.html
+++ b/app/index.html
@@ -109,9 +109,13 @@
       </div>
       <!----                                                              ---->
       <!--| MEASURE AND LEVELES                                            |-->
-      <ul class="measure measure--js"></ul>
-      <div class="level level--average level--js-average"></div>
-      <div class="level level--optimal level--js-optimal"></div>
+      <div class="graph">
+        <ul class="graph__measure graph__measure--js"></ul>
+        <div class="graph__levels">
+          <div class="graph__level graph__level--avg graph__level--js-avg"></div>
+          <div class="graph__level graph__level--min graph__level--js-min"></div>
+        </div>
+      </div>
     </section>
     <!--| end of APP CONTAINER                                             |-->
     <!--//                                                               //|-->
