feat(sidebar): show sidebar on right side on tablets and desktops

--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
     <!--| end of APP HEADER                                                |-->
     <!--//                                                               //|-->
     <!--| APP CONTAINER                                                    |-->
-    <section class="app__main">
+    <section class="app__landing app__landing--js">
       <h2 class="app__heading visuallyhidden">Main section</h2>
       <!--| COUNTER                                                        |-->
       <div class="counter counter--js">
