--- a/app/index.html
+++ b/app/index.html
@@ -112,8 +112,12 @@
       <div class="graph">
         <ul class="graph__measure graph__measure--js"></ul>
         <div class="graph__levels">
-          <div class="graph__level graph__level--avg graph__level--js-avg"></div>
-          <div class="graph__level graph__level--min graph__level--js-min"></div>
+          <div class="graph__level graph__level--avg graph__level--js-avg">
+            AVG
+          </div>
+          <div class="graph__level graph__level--min graph__level--js-min">
+            MIN
+          </div>
         </div>
       </div>
     </section>
