--- a/app/index.html
+++ b/app/index.html
@@ -56,10 +56,87 @@
     </header>
     <!--| end of APP HEADER                                                |-->
     <!--//                                                               //|-->
+    <!--| APP USER DATA                                                    |-->
+    <form class="app__user app__user--js">
+      <h2 class="app__heading visuallyhidden">User data</h2>
+      <!--: USER NAME                                                      :-->
+      <div class="user user--js-name">
+        <label for="userName" class="user__label">
+          Hello stranger, what's your name?
+        </label>
+        <input id="userName" class="user__input user__input--js-name" type="text">
+        <button class="user__button user__button--next user__button--js-next">
+          <svg class="user__svg" viewBox="0 0 512 512">
+            <use href="assets/svg/icons.svg#right-arrow"></use>
+          </svg>
+        </button>
+      </div>
+      <!--: USER AGE                                                       :-->
+      <div class="user user--js-age">
+        <label for="userAge" class="user__label">
+          What's your age?
+        </label>
+        <input id="userAge" class="user__input user__input--js-age" type="number">
+        <button class="user__button user__button--prev user__button--js-prev">
+          <svg class="user__svg" viewBox="0 0 512 512">
+            <use href="assets/svg/icons.svg#left-arrow"></use>
+          </svg>
+        </button>
+        <button class="user__button user__button--next user__button--js-next">
+          <svg class="user__svg" viewBox="0 0 512 512">
+            <use href="assets/svg/icons.svg#right-arrow"></use>
+          </svg>
+        </button>
+      </div>
+      <!--: USER WEIGHT                                                    :-->
+      <div class="user user--js-weight">
+        <label for="userWeight" class="user__label">
+          What's your weight?
+        </label>
+        <input
+          id="userWeight"
+          class="user__input user__input--js-weight"
+          type="number"
+        >
+        <button class="user__button user__button--prev user__button--js-prev">
+          <svg class="user__svg" viewBox="0 0 512 512">
+            <use href="assets/svg/icons.svg#left-arrow"></use>
+          </svg>
+        </button>
+        <button class="user__button user__button--next user__button--js-next">
+          <svg class="user__svg" viewBox="0 0 512 512">
+            <use href="assets/svg/icons.svg#right-arrow"></use>
+          </svg>
+        </button>
+      </div>
+      <!--: USER HEIGHT                                                    :-->
+      <div class="user user--js-height">
+        <label for="userHeight" class="user__label">
+          Last but not least.. what's your height?
+        </label>
+        <input
+          id="userHeight"
+          class="user__input user__input--js-height"
+          type="number"
+        >
+        <button class="user__button user__button--prev user__button--js-prev">
+          <svg class="user__svg" viewBox="0 0 512 512">
+            <use href="assets/svg/icons.svg#left-arrow"></use>
+          </svg>
+        </button>
+        <button class="user__button user__button--next user__button--js-send">
+          <svg class="user__svg" viewBox="0 0 512 512">
+            <use href="assets/svg/icons.svg#right-arrow"></use>
+          </svg>
+        </button>
+      </div>
+    </form>
+    <!--| end of APP USER DATA                                             |-->
+    <!--//                                                               //|-->
     <!--| APP CONTAINER                                                    |-->
     <section class="app__landing app__landing--js">
       <h2 class="app__heading visuallyhidden">Main section</h2>
-      <!--| COUNTER                                                        |-->
+      <!--: COUNTER                                                        :-->
       <div class="counter counter--js">
         <p class="counter__day counter__day--js"></p>
         <p class="counter__date counter__date--js"></p>
@@ -84,7 +161,7 @@
         <p class="counter__message counter__message--js"></p>
       </div>
       <!----                                                              ---->
-      <!--| WATER                                                          |-->
+      <!--: WATER                                                          :-->
       <div class="water water--js">
         <div class="waves waves--js">
           <div class="wave wave--before wave--js"></div>
@@ -93,7 +170,7 @@
         </div>
       </div>
       <!----                                                              ---->
-      <!--| CONTROLS                                                       |-->
+      <!--: CONTROLS                                                       :-->
       <div class="controls controls--js">
         <button class="button button--add button--js-add">
           <svg class="button__svg" viewBox="0 0 512 512">
@@ -108,7 +185,7 @@
         <div class="emoji emoji--controls emoji--js-controls"></div>
       </div>
       <!----                                                              ---->
-      <!--| MEASURE AND LEVELES                                            |-->
+      <!--: MEASURE AND LEVELES                                            :-->
       <div class="graph">
         <ul class="graph__measure graph__measure--js"></ul>
         <div class="graph__levels">
