--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,12 @@
         <label for="userName" class="user__label">
           Hello stranger, what's your name?
         </label>
-        <input id="userName" class="user__input user__input--js-name" type="text">
+        <input
+          id="userName"
+          class="user__input user__input--js-name"
+          type="text"
+          maxlength="20"
+        >
         <button class="user__button user__button--next user__button--js-next">
           <svg class="user__svg" viewBox="0 0 512 512">
             <use href="assets/svg/icons.svg#right-arrow"></use>
@@ -72,11 +77,17 @@
         </button>
       </div>
       <!--: USER AGE                                                       :-->
-      <div class="user user--js-age">
+      <div class="user user--visible user--js-age">
         <label for="userAge" class="user__label">
           What's your age?
         </label>
-        <input id="userAge" class="user__input user__input--js-age" type="number">
+        <input
+          id="userAge"
+          class="user__input user__input--js-age"
+          type="number"
+          min="1"
+          max="120"
+        >
         <button class="user__button user__button--prev user__button--js-prev">
           <svg class="user__svg" viewBox="0 0 512 512">
             <use href="assets/svg/icons.svg#left-arrow"></use>
@@ -97,6 +108,8 @@
           id="userWeight"
           class="user__input user__input--js-weight"
           type="number"
+          min="1"
+          max="200"
         >
         <button class="user__button user__button--prev user__button--js-prev">
           <svg class="user__svg" viewBox="0 0 512 512">
@@ -118,6 +131,8 @@
           id="userHeight"
           class="user__input user__input--js-height"
           type="number"
+          min="1"
+          max="250"
         >
         <button class="user__button user__button--prev user__button--js-prev">
           <svg class="user__svg" viewBox="0 0 512 512">
