feat(user): add toggling functionality between user input details

--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
     <form class="app__user app__user--js">
       <h2 class="app__heading visuallyhidden">User data</h2>
       <!--: USER NAME                                                      :-->
-      <div class="user user--js-name">
+      <div class="user user--js">
         <label for="userName" class="user__label">
           Hello stranger, what's your name?
         </label>
@@ -77,7 +77,7 @@
         </button>
       </div>
       <!--: USER AGE                                                       :-->
-      <div class="user user--visible user--js-age">
+      <div class="user user--visible user--js">
         <label for="userAge" class="user__label">
           What's your age?
         </label>
@@ -100,7 +100,7 @@
         </button>
       </div>
       <!--: USER WEIGHT                                                    :-->
-      <div class="user user--js-weight">
+      <div class="user user--js">
         <label for="userWeight" class="user__label">
           What's your weight?
         </label>
@@ -123,7 +123,7 @@
         </button>
       </div>
       <!--: USER HEIGHT                                                    :-->
-      <div class="user user--js-height">
+      <div class="user user--js">
         <label for="userHeight" class="user__label">
           Last but not least.. what's your height?
         </label>
