feat(user): handle validation alerts in user section

--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,9 @@
           type="text"
           maxlength="3"
         >
+        <div class="user__alert user__alert--js">
+          <p class="user__alertText"></p>
+        </div>
         <button class="user__button user__button--prev user__button--js-prev">
           <svg class="user__svg" viewBox="0 0 512 512">
             <use href="assets/svg/icons.svg#left-arrow"></use>
@@ -109,6 +112,9 @@
           type="text"
           maxlength="3"
         >
+        <div class="user__alert user__alert--js">
+          <p class="user__alertText"></p>
+        </div>
         <button class="user__button user__button--prev user__button--js-prev">
           <svg class="user__svg" viewBox="0 0 512 512">
             <use href="assets/svg/icons.svg#left-arrow"></use>
@@ -131,6 +137,9 @@
           type="text"
           maxlength="3"
         >
+        <div class="user__alert user__alert--js">
+          <p class="user__alertText"></p>
+        </div>
         <button class="user__button user__button--prev user__button--js-prev">
           <svg class="user__svg" viewBox="0 0 512 512">
             <use href="assets/svg/icons.svg#left-arrow"></use>
