feat(user): add userName to hydrappJson

--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
         </label>
         <input
           id="userName"
-          class="user__input user__input--js-name"
+          class="user__input user__input--js"
           type="text"
           maxlength="20"
         >
@@ -83,7 +83,7 @@
         </label>
         <input
           id="userAge"
-          class="user__input user__input--js-age"
+          class="user__input user__input--js"
           type="text"
           maxlength="3"
         >
@@ -108,7 +108,7 @@
         </label>
         <input
           id="userWeight"
-          class="user__input user__input--js-weight"
+          class="user__input user__input--js"
           type="text"
           maxlength="3"
         >
@@ -133,7 +133,7 @@
         </label>
         <input
           id="userHeight"
-          class="user__input user__input--js-height"
+          class="user__input user__input--js"
           type="text"
           maxlength="3"
         >
@@ -145,7 +145,7 @@
             <use href="assets/svg/icons.svg#left-arrow"></use>
           </svg>
         </button>
-        <button class="user__button user__button--next user__button--js-send">
+        <button class="user__button user__button--next user__button--js-next">
           <svg class="user__svg" viewBox="0 0 512 512">
             <use href="assets/svg/icons.svg#right-arrow"></use>
           </svg>
