--- a/app/index.html
+++ b/app/index.html
@@ -150,6 +150,7 @@
       <!--: STATS SECTION                                                  :-->
       <section class="tab tab--stats tab--js-stats">
         <h3 class="tab__header">
+          <!--. HEADER BUTTON                                              :-->
           <button class="tab__button tab__button--js-stats">
             <span class="tab__heading">Stats</span>
             <svg class="tab__svg" viewBox="0 0 512 512">
@@ -157,10 +158,40 @@
             </svg>
           </button>
         </h3>
+        <!--. STATS CONTAINER                                              :-->
         <div class="tab__container tab__container--js">
-          <div class="stats stats--js">
-            <p class="stats__text">Check out again soon...</p>
-          </div>
+          <table class="stats stats--js">
+            <caption class="stats__caption visuallyhidden">Stats</caption>
+            <!--. table header                                             :-->
+            <thead class="stats__header">
+              <tr class="stats__row">
+                <th colspan="2" class="stats__cell stats__cell--header">User</th>
+              </tr>
+            </thead>
+            <!--. table body                                               :-->
+            <tbody class="stats__body">
+              <tr class="stats__row">
+                <th scope="row" class="stats__cell">Name:</th>
+                <td class="stats__cell">Jakub</td>
+              </tr>
+              <tr class="stats__row">
+                <th scope="row" class="stats__cell">Age:</th>
+                <td class="stats__cell">32</td>
+              </tr>
+              <tr class="stats__row">
+                <th scope="row" class="stats__cell">Weight:</th>
+                <td class="stats__cell">68 kg</td>
+              </tr>
+              <tr class="stats__row">
+                <th scope="row" class="stats__cell">Height:</th>
+                <td class="stats__cell">182 cm</td>
+              </tr>
+              <tr class="stats__row">
+                <th scope="row" class="stats__cell">Average water consumption:</th>
+                <td class="stats__cell">6.5 glasses</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </section>
       <!--: end of STATS SECTION                                           :-->
