--- a/app/index.html
+++ b/app/index.html
@@ -159,39 +159,95 @@
           </button>
         </h3>
         <!--. STATS CONTAINER                                              :-->
-        <div class="tab__container tab__container--js">
-          <table class="stats stats--js">
-            <caption class="stats__caption visuallyhidden">Stats</caption>
-            <!--. table header                                             :-->
-            <thead class="stats__header">
-              <tr class="stats__row">
-                <th colspan="2" class="stats__cell stats__cell--header">User</th>
-              </tr>
-            </thead>
-            <!--. table body                                               :-->
-            <tbody class="stats__body">
-              <tr class="stats__row">
-                <th scope="row" class="stats__cell">Name:</th>
-                <td class="stats__cell">Jakub</td>
-              </tr>
-              <tr class="stats__row">
-                <th scope="row" class="stats__cell">Age:</th>
-                <td class="stats__cell">32</td>
-              </tr>
-              <tr class="stats__row">
-                <th scope="row" class="stats__cell">Weight:</th>
-                <td class="stats__cell">68 kg</td>
-              </tr>
-              <tr class="stats__row">
-                <th scope="row" class="stats__cell">Height:</th>
-                <td class="stats__cell">182 cm</td>
-              </tr>
-              <tr class="stats__row">
-                <th scope="row" class="stats__cell">Average water consumption:</th>
-                <td class="stats__cell">6.5 glasses</td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="tab__container tab__container--js tab__container--js-stats">
+          <section class="card card--visible card--stats card--js-stats">
+            <div class="card__container">
+              <header class="card__header card__header---js-stats">
+                <button class="card__button card__button--prev card__button--js-statsPrev">
+                  <svg class="card__svg" viewBox="0 0 512 512">
+                    <use href="assets/svg/icons.svg#left-arrow"></use>
+                  </svg>
+                </button>
+                <h4 class="card__heading card__heading--js-stats">Jakub</h4>
+                <button class="card__button card__button--next card__button--js-statsNext">
+                  <svg class="card__svg" viewBox="0 0 512 512">
+                    <use href="assets/svg/icons.svg#right-arrow"></use>
+                  </svg>
+                </button>
+              </header>
+              <ul class="card__list card__list--js-stats">
+
+
+                <li class="user">
+                  <span for="userName-jakub" class="user__prop">
+                    Name:
+                  </span>
+                  <div class="user__value">
+                    <label for="userName-jakub" class="user__label">
+                      Jakub
+                    </label>
+                    <input
+                      class="user__input"
+                      type="text"
+                      maxlength="20"
+                    >
+                  </div>
+                  <div class="edition edition--js">
+                    <button class="edition__button edition__button--visible edition__button--edit edition__button--js-edit">
+                      <svg class="edition__svg edition__svg--edit">
+                        <use href="assets/svg/icons.svg#edit-mode"></use>
+                      </svg>
+                    </button>                   
+                    <button class="edition__button edition__button--cancel edition__button--js-cancel">
+                      <svg class="edition__svg edition__svg--cancel">
+                        <use href="assets/svg/icons.svg#back-arrow"></use>
+                      </svg>
+                    </button>
+                    <button class="edition__button edition__button--save edition__button--js-save">
+                      <svg class="edition__svg edition__svg--save">
+                        <use href="assets/svg/icons.svg#save-icon"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </li>
+
+                <li class="user">
+                  <span for="userAge-jakub" class="user__prop">
+                    Age:
+                  </span>
+                  <div class="user__value">
+                    <label for="userAge-jakub" class="user__label">
+                      32
+                    </label>
+                    <input
+                      class="user__input"
+                      type="text"
+                      maxlength="3"
+                    >
+                  </div>
+                  <div class="edition edition--js">    
+                    <button class="edition__button edition__button--visible edition__button--edit edition__button--js-edit">
+                      <svg class="edition__svg edition__svg--edit">
+                        <use href="assets/svg/icons.svg#edit-mode"></use>
+                      </svg>
+                    </button>                
+                    <button class="edition__button edition__button--cancel edition__button--js-cancel">
+                      <svg class="edition__svg edition__svg--cancel">
+                        <use href="assets/svg/icons.svg#back-arrow"></use>
+                      </svg>
+                    </button>
+                    <button class="edition__button edition__button--save edition__button--js-save">
+                      <svg class="edition__svg edition__svg--save">
+                        <use href="assets/svg/icons.svg#save-icon"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </li>
+
+
+              </ul>
+            </div>
+          </section>
         </div>
       </section>
       <!--: end of STATS SECTION                                           :-->
