feat(logIn): create initial structure and styles of logIn section mockup

--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,19 @@
       <h2 class="app__heading visuallyhidden">User data</h2>
     </form>
     <!--| end of APP USER DATA                                             |-->
+    <!--| APP USER LOG IN                                                  |-->
+    <section class="app__logIn app__logIn--js">
+      <h2 class="app__heading">Log In</h2>
+      <ul class="usersList usersList--js">
+
+        <li class="usersList__item">
+          Jakub
+        </li>
+
+
+      </ul>
+    </section>
+    <!--| end of APP USER LOG IN                                           |-->
     <!--//                                                               //|-->
     <!--| APP CONTAINER                                                    |-->
     <section class="app__landing app__landing--js">
