feat(logIn): set structure and styles of user log in section mockup

--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,64 @@
       <ul class="usersList usersList--js">
 
         <li class="usersList__item">
-          Jakub
+          <button class="usersList__button userList__button--js">
+            Jakub
+          </button>
+        </li>
+        <li class="usersList__item">
+          <button class="usersList__button userList__button--js">
+            Anna
+          </button>
+        </li>
+        <li class="usersList__item">
+          <button class="usersList__button userList__button--js">
+            Aleksander
+          </button>
+        </li>
+        <li class="usersList__item">
+          <button class="usersList__button userList__button--js">
+            Agnieszka
+          </button>
+        </li>
+        <li class="usersList__item">
+          <button class="usersList__button userList__button--js">
+            Jakub
+          </button>
+        </li>
+        <li class="usersList__item">
+          <button class="usersList__button userList__button--js">
+            Anna
+          </button>
+        </li>
+        <li class="usersList__item">
+          <button class="usersList__button userList__button--js">
+            Aleksander
+          </button>
+        </li>
+        <li class="usersList__item">
+          <button class="usersList__button userList__button--js">
+            Agnieszka
+          </button>
+        </li>
+        <li class="usersList__item">
+          <button class="usersList__button userList__button--js">
+            Jakub
+          </button>
+        </li>
+        <li class="usersList__item">
+          <button class="usersList__button userList__button--js">
+            Anna
+          </button>
+        </li>
+        <li class="usersList__item">
+          <button class="usersList__button userList__button--js">
+            Aleksander
+          </button>
+        </li>
+        <li class="usersList__item">
+          <button class="usersList__button userList__button--js">
+            Agnieszka
+          </button>
         </li>
 
 
