feat(logIn): create list of users in log in box dynamically

--- a/app/index.html
+++ b/app/index.html
@@ -64,71 +64,7 @@
     <!--| APP USER LOG IN                                                  |-->
     <section class="app__logIn app__logIn--js">
       <h2 class="app__heading">Log In</h2>
-      <ul class="usersList usersList--js">
-
-        <li class="usersList__item">
-          <button class="usersList__button userList__button--js">
-            Jakub
-          </button>
-        </li>
-        <li class="usersList__item">
-          <button class="usersList__button userList__button--js">
-            Anna
-          </button>
-        </li>
-        <li class="usersList__item">
-          <button class="usersList__button userList__button--js">
-            Aleksander
-          </button>
-        </li>
-        <li class="usersList__item">
-          <button class="usersList__button userList__button--js">
-            Agnieszka
-          </button>
-        </li>
-        <li class="usersList__item">
-          <button class="usersList__button userList__button--js">
-            Jakub
-          </button>
-        </li>
-        <li class="usersList__item">
-          <button class="usersList__button userList__button--js">
-            Anna
-          </button>
-        </li>
-        <li class="usersList__item">
-          <button class="usersList__button userList__button--js">
-            Aleksander
-          </button>
-        </li>
-        <li class="usersList__item">
-          <button class="usersList__button userList__button--js">
-            Agnieszka
-          </button>
-        </li>
-        <li class="usersList__item">
-          <button class="usersList__button userList__button--js">
-            Jakub
-          </button>
-        </li>
-        <li class="usersList__item">
-          <button class="usersList__button userList__button--js">
-            Anna
-          </button>
-        </li>
-        <li class="usersList__item">
-          <button class="usersList__button userList__button--js">
-            Aleksander
-          </button>
-        </li>
-        <li class="usersList__item">
-          <button class="usersList__button userList__button--js">
-            Agnieszka
-          </button>
-        </li>
-
-
-      </ul>
+      <ul class="usersList usersList--js"></ul>
     </section>
     <!--| end of APP USER LOG IN                                           |-->
     <!--//                                                               //|-->
