feat(newUser): set newUserDOM only if it does not exist yet

--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
     <!--| end of APP HEADER                                                |-->
     <!--//                                                               //|-->
     <!--| APP USER DATA                                                    |-->
-    <form class="app__user app__user--js">
+    <form class="app__newUser app__newUser--js">
       <h2 class="app__heading visuallyhidden">User data</h2>
     </form>
     <!--| end of APP USER DATA                                             |-->
@@ -65,6 +65,9 @@
     <section class="app__logIn app__logIn--js">
       <h2 class="app__heading">Log In</h2>
       <ul class="usersList usersList--js"></ul>
+      <button class="app__createUserButton app__createUserButton--js">
+        Create New User
+      </button>
     </section>
     <!--| end of APP USER LOG IN                                           |-->
     <!--//                                                               //|-->
