feat(stats): create stats DOM structure for all fetched users

--- a/app/index.html
+++ b/app/index.html
@@ -98,6 +98,7 @@
         </div>
         <p class="counter__message counter__message--js"></p>
       </div>
+      <!--: end of COUNTER                                                 :-->
       <!----                                                              ---->
       <!--: WATER                                                          :-->
       <div class="water water--js">
@@ -107,6 +108,7 @@
           <div class="wave wave--after wave--js"></div>
         </div>
       </div>
+      <!--: end of WATER                                                   :-->
       <!----                                                              ---->
       <!--: CONTROLS                                                       :-->
       <div class="controls controls--js">
@@ -122,8 +124,9 @@
         </button>
         <div class="emoji emoji--controls emoji--js-controls"></div>
       </div>
+      <!--: end of CONTROLS                                                :-->
       <!----                                                              ---->
-      <!--: MEASURE AND LEVELES                                            :-->
+      <!--: MEASURE AND LEVELS                                             :-->
       <div class="graph">
         <ul class="graph__measure graph__measure--js"></ul>
         <div class="graph__levels">
@@ -135,6 +138,7 @@
           </div>
         </div>
       </div>
+      <!--: end of MEASURE AND LEVELS                                      :-->
     </section>
     <!--| end of APP CONTAINER                                             |-->
     <!--//                                                               //|-->
