feat(settings): set content for settings tab dynamically

--- a/app/index.html
+++ b/app/index.html
@@ -173,8 +173,7 @@
           </button>
         </h3>
         <!-- STATS CONTAINER -->
-        <div class="tab__container tab__container--js tab__container--js-stats">
-        </div>
+        <div class="tab__container tab__container--js tab__container--js-stats"></div>
       </section>
       <!-- #endregion -->
       <!-- #region [ Horizon ] SETTINGS TAB -->
@@ -187,11 +186,8 @@
             </svg>
           </button>
         </h3>
-        <div class="tab__container tab__container--js">
-          <div class="settings settings-js">
-            <p class="settings__text">Check out again soon...</p>
-          </div>
-        </div>
+        <!-- SETTINGS CONTAINER -->
+        <div class="tab__container tab__container--js tab__container--js-settings"></div>
       </section>
       <!-- #endregion -->
       <!-- #region [ Horizon ] ADD NEW ARCHIVE ENTRY -->
