--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
   <main class="app">
-    <!-- #region [ Horizon ] HEADER -->
+    <!-- #region [ HorizonLight ] HEADER -->
     <header class="app__header app__header--js">
       <h1 class="app__heading visuallyhidden">hydrApp</h1>
       <!-- APP LOGO -->
@@ -60,7 +60,7 @@
     </header>
     <!-- #endregion -->
     
-    <!-- #region [ Horizon ] USER PROFILE -->
+    <!-- #region [ HorizonLight ] USER PROFILE -->
     <div class="app__userProfile app__userProfile--visible app__userProfile--js">
       <!-- USER LOG IN -->
       <section class="app__logIn app__logIn--js">
@@ -80,7 +80,7 @@
     <!-- #region APP LANDING SCREEN -->
     <section class="app__landing app__landing--js">
       <h2 class="app__heading visuallyhidden">Main section</h2>
-      <!-- #region [ Horizon ] COUNTER -->
+      <!-- #region [ HorizonLight ] COUNTER -->
       <div class="counter counter--js">
         <p class="counter__day counter__day--js"></p>
         <p class="counter__date counter__date--js"></p>
@@ -105,7 +105,7 @@
         <p class="counter__message counter__message--js"></p>
       </div>
       <!-- #endregion -->
-      <!-- #region [ Horizon ] WATER -->
+      <!-- #region [ HorizonLight ] WATER -->
       <div class="water water--js">
         <div class="waves waves--js">
           <div class="wave wave--before wave--js"></div>
@@ -114,7 +114,7 @@
         </div>
       </div>
       <!-- #endregion -->
-      <!-- #region [ Horizon ] CONTROLS -->
+      <!-- #region [ HorizonLight ] CONTROLS -->
       <div class="controls controls--js">
         <button class="button button--add button--js-add">
           <svg class="button__svg" viewBox="0 0 512 512">
@@ -129,7 +129,7 @@
         <div class="emoji emoji--controls emoji--js-controls"></div>
       </div>
       <!-- #endregion -->
-      <!-- #region [ Horizon ] MEASURE AND LEVELS -->
+      <!-- #region [ HorizonLight ] MEASURE AND LEVELS -->
       <div class="graph">
         <ul class="graph__measure graph__measure--js"></ul>
         <div class="graph__levels">
@@ -148,7 +148,7 @@
     <!-- #region SIDEBAR -->
     <section class="app__sidebar app__sidebar--js">
       <h2 class="app__heading visuallyhidden">App sidebar</h2>
-      <!-- #region [ Horizon ] ARCHIVE TAB -->
+      <!-- #region [ HorizonLight ] ARCHIVE TAB -->
       <section class="tab tab--archive tab--js-archive">
         <h3 class="tab__header">
           <button class="tab__button tab__button--js-archive">
@@ -161,7 +161,7 @@
         <div class="tab__container tab__container--js tab__container--js-archive"></div>
       </section>
       <!-- #endregion -->
-      <!-- #region [ Horizon ] STATS TAB -->
+      <!-- #region [ HorizonLight ] STATS TAB -->
       <section class="tab tab--stats tab--js-stats">
         <h3 class="tab__header">
           <!-- HEADER BUTTON -->
@@ -176,7 +176,7 @@
         <div class="tab__container tab__container--js tab__container--js-stats"></div>
       </section>
       <!-- #endregion -->
-      <!-- #region [ Horizon ] SETTINGS TAB -->
+      <!-- #region [ HorizonLight ] SETTINGS TAB -->
       <section class="tab tab--settings tab--js-settings">
         <h3 class="tab__header">
           <button class="tab__button tab__button--js-settings">
@@ -190,7 +190,7 @@
         <div class="tab__container tab__container--js tab__container--js-settings"></div>
       </section>
       <!-- #endregion -->
-      <!-- #region [ Horizon ] ADD NEW ARCHIVE ENTRY -->
+      <!-- #region [ HorizonLight ] ADD NEW ARCHIVE ENTRY -->
       <section class="newEntry newEntry--js">
         <h3 class="newEntry__heading visuallyhidden">Add new archive entry</h3>
         <div class="newEntry__container">
