feat(water): generate content of appWater container dynamically

--- a/app/index.html
+++ b/app/index.html
@@ -107,13 +107,7 @@
       <!-- #endregion -->
       
       <!-- #region [ HorizonLight ] WATER -->
-      <div class="water water--js">
-        <div class="waves waves--js">
-          <div class="wave wave--before wave--js"></div>
-          <div class="wave wave--js"></div>
-          <div class="wave wave--after wave--js"></div>
-        </div>
-      </div>
+      <div class="app__water app__water--js"></div>
       <!-- #endregion -->
       
       <!-- #region [ HorizonLight ] CONTROLS -->
