style(landing): update minimum and average water levels indicators

--- a/app/index.html
+++ b/app/index.html
@@ -129,14 +129,14 @@
       <!-- #region [ HorizonLight ] MEASURE AND LEVELS -->
       <div class="graph">
         <ul class="graph__measure graph__measure--js"></ul>
-        <div class="graph__levels">
+        <!-- <div class="graph__levels"> -->
           <div class="graph__level graph__level--avg graph__level--js-avg">
             AVG
           </div>
           <div class="graph__level graph__level--min graph__level--js-min">
             MIN
           </div>
-        </div>
+        <!-- </div> -->
       </div>
       <!-- #endregion -->
     </section>
