feat(settings): do not log out last user automatically on session end

--- a/app/index.html
+++ b/app/index.html
@@ -188,16 +188,30 @@
       </section>
       <!-- #endregion -->
       
-      <!-- #region [ HorizonLight ] ADD NEW ARCHIVE ENTRY -->
+      <!-- #region [ HorizonDark ] ADD NEW ARCHIVE ENTRY -->
+
       <section class="newEntry newEntry--js">
         <h3 class="newEntry__heading visuallyhidden">Add new archive entry</h3>
         <div class="newEntry__container">
-          <div class="newEntry__display newEntry__display--js">
-            <p class="newEntry__value newEntry__value--js"></p>
-            <p class="newEntry__date newEntry__date--js"></p>
-            <p class="newEntry__day newEntry__day--js"></p>
-          </div>
-          <div class="emoji emoji--new emoji--js-new"></div>
+          <!-- TENTHS -->
+          <!-- <div class="digit digit--tenths">
+            <svg class="digit__svg digit__svg--js-prevTenths" viewBox="0 0 80 100">
+              <use href=""></use>
+            </svg>
+            <svg class="digit__svg digit--overlay digit__svg--js-nextTenths" viewBox="0 0 80 100">
+              <use href=""></use>
+            </svg>
+          </div> -->
+          <!-- ONES -->
+         <!--  <div class="digit digit--ones">
+            <svg class="digit__svg digit__svg--js-prevOnes" viewBox="0 0 80 100">
+              <use href=""></use>
+            </svg>
+            <svg class="digit__svg digit--overlay digit__svg--js-nextOnes" viewBox="0 0 80 100">
+              <use href=""></use>
+            </svg>
+          </div> -->
+          
           <button class="newEntry__button newEntry__button--decrease newEntry__button--js-decrease">
             <svg class="newEntry__svg newEntry__svg--decrease" viewBox="0 0 512 512">
               <use href="assets/svg/icons.svg#minus-circle"></use>
