feat(sidebar): close open tabs after log out or user removal

--- a/app/index.html
+++ b/app/index.html
@@ -151,7 +151,7 @@
         <h3 class="tab__header">
           <button class="tab__button tab__button--js-archive">
             <span class="tab__heading">Archive</span>
-            <svg class="tab__svg" viewBox="0 0 512 512">
+            <svg class="tab__svg tab__svg--js" viewBox="0 0 512 512">
               <use href="assets/svg/icons.svg#plus-cross"></use>
             </svg>
           </button>
@@ -166,7 +166,7 @@
           <!-- HEADER BUTTON -->
           <button class="tab__button tab__button--js-stats">
             <span class="tab__heading">Stats</span>
-            <svg class="tab__svg" viewBox="0 0 512 512">
+            <svg class="tab__svg tab__svg--js" viewBox="0 0 512 512">
               <use href="assets/svg/icons.svg#plus-cross"></use>
             </svg>
           </button>
@@ -181,7 +181,7 @@
         <h3 class="tab__header">
           <button class="tab__button tab__button--js-settings">
             <span class="tab__heading">Settings</span>
-            <svg class="tab__svg" viewBox="0 0 512 512">
+            <svg class="tab__svg tab__svg--js" viewBox="0 0 512 512">
               <use href="assets/svg/icons.svg#plus-cross"></use>
             </svg>
           </button>
