feat: create JSON object containing initial users

--- a/app/index.html
+++ b/app/index.html
@@ -78,7 +78,7 @@
     <!-- #endregion -->
 
     <!-- #region [ HorizonDark ] INTRO ANIMATION -->
-    <div class="intro intro--visible intro--js"></div>
+    <div class="intro intro--js"></div>
     <!-- #endregion -->
     
     <!-- #region [ HorizonDark ] WATER -->
