style(login): set style of loginBox

--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,7 @@
         >
         <!-- ALERT -->
         <div class="loginBox__alert loginBox__alert--js">
-          <p class="loginBox__alertText"></p>
+          <p class="loginBox__alertText">Something...</p>
         </div>
         <!-- LOG IN BUTTON -->
         <button class="loginBox__button loginBox__button--logIn loginBox__button--js-logIn">
