--- a/app/index.html
+++ b/app/index.html
@@ -201,8 +201,22 @@
             </svg>
           </button>
         </h3>
-        <!-- SETTINGS CONTAINER -->
-        <div class="tab__container tab__container--js tab__container--js-settings"></div>
+        <div class="tab__wrapper">
+          <!-- SETTINGS CONTAINER -->
+          <div class="tab__container tab__container--js tab__container--js-settings"></div>
+          <!-- CONFIRM USER REMOVE -->
+          <div class="remove">
+            <p class="remove__alert">Are you sure to remove the user?</p>
+            <button class="remove__cancel remove__cancel--js">
+              <svg class="remove__svg" viewBox="0 0 512 512">
+                <use href="assets/svg/icons.svg#plus-cross"></use>
+              </svg>
+            </button>
+            <button class="remove__confirm remove__confirm--js">
+              Yes, remove it!
+            </button>
+          </div>
+        </div>
       </section>
       <!-- #endregion -->
     </section>
