feat(settings): add user removal confirmation functionality

--- a/app/index.html
+++ b/app/index.html
@@ -205,14 +205,16 @@
           <!-- SETTINGS CONTAINER -->
           <div class="tab__container tab__container--js tab__container--js-settings"></div>
           <!-- CONFIRM USER REMOVE -->
-          <div class="remove">
-            <p class="remove__alert">Are you sure to remove the user?</p>
-            <button class="remove__cancel remove__cancel--js">
-              <svg class="remove__svg" viewBox="0 0 512 512">
+          <div class="userRemove userRemove--js">
+            <p class="userRemove__alert userRemove__alert--js">
+              Are you sure to remove the user?
+            </p>
+            <button class="userRemove__cancel userRemove__cancel--js">
+              <svg class="userRemove__svg" viewBox="0 0 512 512">
                 <use href="assets/svg/icons.svg#plus-cross"></use>
               </svg>
             </button>
-            <button class="remove__confirm remove__confirm--js">
+            <button class="userRemove__confirm userRemove__confirm--js">
               Yes, remove it!
             </button>
           </div>
