feat(settings): display user's name in user remove confirmation alert

--- a/app/index.html
+++ b/app/index.html
@@ -206,10 +206,8 @@
           <div class="tab__container tab__container--js tab__container--js-settings"></div>
           <!-- CONFIRM USER REMOVE -->
           <div class="userRemove userRemove--js">
-            <p class="userRemove__alert userRemove__alert--js">
-              Are you sure to remove the user?
-            </p>
-            <button class="userRemove__cancel userRemove__cancel--js">
+            <p class="userRemove__alert userRemove__alert--js"></p>
+            <button class="userRemove__cancel">
               <svg class="userRemove__svg" viewBox="0 0 512 512">
                 <use href="assets/svg/icons.svg#plus-cross"></use>
               </svg>
