feat(ranking): add ranking initial structure and toggling functionality

--- a/app/index.html
+++ b/app/index.html
@@ -199,6 +199,21 @@
         <div class="tab__container tab__container--js tab__container--js-stats"></div>
       </section>
       <!-- #endregion -->
+      <!-- #region [ HorizonDark ] RANKING TAB -->
+      <section class="tab tab--ranking tab--js-ranking">
+        <h3 class="tab__header">
+          <!-- HEADER BUTTON -->
+          <button class="tab__button tab__button--js-ranking">
+            <span class="tab__heading">Ranking</span>
+            <svg class="tab__svg tab__svg--js" viewBox="0 0 512 512">
+              <use href="assets/svg/icons.svg#plus-cross"></use>
+            </svg>
+          </button>
+        </h3>
+        <!-- RANKING CONTAINER -->
+        <div class="tab__container tab__container--js tab__container--js-ranking"></div>
+      </section>
+      <!-- #endregion -->
       <!-- #region [ HorizonDark ] SETTINGS TAB -->
       <section class="tab tab--settings tab--js-settings">
         <h3 class="tab__header">
