--- a/app/index.html
+++ b/app/index.html
@@ -273,13 +273,19 @@
       </div>
       <div class="controls controls--newEntry controls--top">
         <!-- CANCEL BUTTON -->
-        <button class="button button--newEntry button--cancel button--js-cancel">
+        <button
+          class="button button--newEntry button--cancel button--js-cancel"
+          tabIndex="-1"
+        >
           <svg class="button__svg button__svg--cancel" viewBox="0 0 512 512">
             <use href="assets/svg/icons.svg#back-arrow"></use>
           </svg>
         </button>
         <!-- SAVE BUTTON -->
-        <button class="button button--newEntry button--save button--js-save">
+        <button
+          class="button button--newEntry button--save button--js-save"
+          tabIndex="-1"
+        >
           <svg class="button__svg button__svg--save" viewBox="0 0 512 512">
             <use href="assets/svg/icons.svg#save-icon"></use>
           </svg>
@@ -287,13 +293,19 @@
       </div>
       <div class="controls controls--newEntry">
         <!-- INCREASE BUTTON -->
-        <button class="button button--newEntry button--increase button--js-increase">
+        <button
+          class="button button--newEntry button--increase button--js-increase"
+          tabIndex="-1"
+        >
           <svg class="button__svg button__svg--increase" viewBox="0 0 512 512">
             <use href="assets/svg/icons.svg#plus-circle"></use>
           </svg>
         </button>
         <!-- DECREASE BUTTON -->
-        <button class="button button--newEntry button--decrease button--js-decrease">
+        <button
+          class="button button--newEntry button--decrease button--js-decrease"
+          tabIndex="-1"
+        >
           <svg class="button__svg button__svg--decrease" viewBox="0 0 512 512">
             <use href="assets/svg/icons.svg#minus-circle"></use>
           </svg>
